--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
 he's coming
 <h2>First Quarter Assignments<h2/>
-<a href="mort.html">Click here for pictures of mort
+<a href="mort.html">Click here for pictures of mort<br/>
+<a href="javaScript.html">Click here for my first javascript page
 
 </font>
 </body>
