--- a/slideshow.html
+++ b/slideshow.html
@@ -4,12 +4,12 @@
 <script language="JavaScript">
  
  var counter = 0;
- var picList = [  "images/Cars/Demon.jpg", 
-                  "images/Cars/SVJ.jpg",
-				  "images/Cars/Miata.jpg",
-				  "images/Cars/Skyline.jpg",
-				  "images/Cars/RSR.jpg",
-				  "images/Cars/LFA.jpg" ]
+ var picList = [  "Images/Cars/Demon.jpg", 
+                  "Images/Cars/SVJ.jpg",
+				  "Images/Cars/Miata.jpg",
+				  "Images/Cars/Skyline.jpg",
+				  "Images/Cars/RSR.jpg",
+				  "Images/Cars/LFA.jpg" ]
 				  
 var clipList = [ "sounds/CarSounds/DemonSound.mp3",
 				 "sounds/CarSounds/SVJSound.mp3",
