--- a/Fis.html
+++ b/Fis.html
@@ -6,7 +6,7 @@
 <body>
 <center> 
 
-<h1>My creation</h1>
+<h1>My Fis</h1>
 <a href="index.html"> click here to return to my home page <a/> <br/>
 
 <br/><br/>
